Fix warnings, adds resource